default/external-services/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-awoofy-ip
subsets:
- addresses:
  - ip: 10.0.0.8
  ports:
  - name: truenas
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-storage-ip
subsets:
- addresses:
  - ip: 10.0.0.8
  ports:
  - name: truenas
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-kracko-ip
subsets:
- addresses:
  - ip: 10.0.0.8
  ports:
  - name: truenas
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-ip
subsets:
- addresses:
  - ip: 10.0.1.1
  ports:
  - name: plex
    port: 32400
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vividria-ip
subsets:
- addresses:
  - ip: 10.0.1.1
  ports:
  - name: plex
    port: 32400
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: walky-ip
subsets:
- addresses:
  - ip: 10.0.1.3
  ports:
  - name: plex
    port: 32400
    protocol: TCP
---
