default/external-services/endpointslices.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex-ip
  labels:
    kubernetes.io/service-name: plex-ip
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.1.1
    conditions:
      ready: true
      serving: true
ports:
  - name: plex
    port: 32400
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vividria-ip
  labels:
    kubernetes.io/service-name: vividria-ip
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.1.1
    conditions:
      ready: true
      serving: true
ports:
  - name: plex
    port: 32400
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: walky-ip
  labels:
    kubernetes.io/service-name: walky-ip
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.1.3
    conditions:
      ready: true
      serving: true
ports:
  - name: plex
    port: 32400
    protocol: TCP
---
