default/external-services/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-awoofy-ip
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    # traefik.ingress.kubernetes.io/service.nativelb: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: default-awoofytransport@kubernetescrd
spec:
  ports:
  - name: truenas
    port: 443
    protocol: TCP
    targetPort: 443
  # clusterIP: None
  # internalTrafficPolicy: Cluster
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  # type: ClusterIP
  type: ExternalName
  externalName: 10.0.0.8
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-storage-ip
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    # traefik.ingress.kubernetes.io/service.nativelb: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: default-storagetransport@kubernetescrd
    tailscale.com/expose: "true"
    tailscale.com/hostname: "storage"
    tailscale.com/proxy-group: ts-proxygroup-network-system
spec:
  ports:
  - name: truenas
    port: 443
    protocol: TCP
    targetPort: 443
  # clusterIP: None
  # internalTrafficPolicy: Cluster
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  # type: ClusterIP
  type: ExternalName
  externalName: 10.0.0.8
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-kracko-ip
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    # traefik.ingress.kubernetes.io/service.nativelb: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: default-krackotransport@kubernetescrd
    tailscale.com/expose: "true"
    tailscale.com/hostname: "truenas"
    tailscale.com/proxy-group: ts-proxygroup-network-system
spec:
  ports:
  - name: truenas
    port: 443
    protocol: TCP
    targetPort: 443
  # clusterIP: None
  # internalTrafficPolicy: Cluster
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  # type: ClusterIP
  type: ExternalName
  externalName: 10.0.0.8
---
apiVersion: v1
kind: Service
metadata:
  name: plex-ip
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    # traefik.ingress.kubernetes.io/service.nativelb: "true"
    traefik.ingress.kubernetes.io/service.serverstransport: default-plextransport@kubernetescrd
    tailscale.com/expose: "true"
    tailscale.com/hostname: "plex"
    tailscale.com/proxy-group: ts-proxygroup-network-system
spec:
  ports:
  - name: plex
    port: 32400
    protocol: TCP
    targetPort: 32400
  # clusterIP: None
  # clusterIPs:
  # - None
  # internalTrafficPolicy: Cluster
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  # type: ClusterIP
  # sessionAffinity: None
  type: ExternalName
  externalName: 10.0.1.1
---
