default/external-services/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: "network-system-authentik@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Core Services
    gethomepage.dev/icon: truenas-scale.svg
    gethomepage.dev/name: Truenas Scale
    gethomepage.dev/description: TrueNAS Scale is a free and open-source network-attached storage (NAS) solution that provides a web-based interface for managing storage, virtualization, and other services. It is built on top of the Linux operating system and offers features like ZFS file system support, Docker containerization, and Kubernetes orchestration, making it a powerful and flexible storage solution for home and enterprise use.
spec:
  ingressClassName: traefik
  rules:
  - host: storage.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: truenas-storage-ip
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: awoofy.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: truenas-awoofy-ip
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: kracko.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: truenas-kracko-ip
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - storage.homelab.heyser.xyz
    - awoofy.homelab.heyser.xyz
    - kracko.homelab.heyser.xyz
    secretName: truenas-homelab-heyser-xyz-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # traefik.ingress.kubernetes.io/router.middlewares: "network-system-authentik@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: plex.svg
    gethomepage.dev/name: Plex
    gethomepage.dev/description: Plex is a media server that organizes and streams your personal media content, including movies, TV shows, music, and photos, across multiple devices. With features like remote access, media transcoding, and a user-friendly interface, Plex allows you to enjoy your media library from anywhere, on any device. It also offers additional features like live TV and DVR capabilities, making it a comprehensive solution for managing and enjoying your media collection.
spec:
  ingressClassName: traefik
  rules:
  - host: plex.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: plex-ip
            port:
              number: 32400
        path: /
        pathType: Prefix
  - host: vividria.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: vividria-ip
            port:
              number: 32400
        path: /
        pathType: Prefix
  - host: walky.homelab.heyser.xyz
    http:
      paths:
      - backend:
          service:
            name: walky-ip
            port:
              number: 32400
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.homelab.heyser.xyz
    - vividria.homelab.heyser.xyz
    - walky.homelab.heyser.xyz
    secretName: plex-homelab-heyser-xyz-tls
